# zsibot_vln

./: .gitignore  LICENSE  README.md  main.py  requirements.txt
agents/zeroshot/unigoal/: ANNOUNCEMENT.md  agent.py  pre_processing.py
agents/zeroshot/unigoal/configs/: categories.py
agents/zeroshot/unigoal/graph/: goalgraphdecomposer.py  graph.py  graphbuilder.py  overlap.py  scenegraphcorrector.py
agents/zeroshot/unigoal/graph/utils/: mapping.py  utils.py
agents/zeroshot/unigoal/map/: bev_mapping.py  utils.py
agents/zeroshot/unigoal/utils/: camera.py  map.py  model.py
agents/zeroshot/unigoal/utils/fmm/: depth_utils.py  depth_utils.py_20250915  fmm_planner.py  pose_utils.py
agents/zeroshot/unigoal/utils/visualization/: save.py  semantic_prediction.py  visualization.py
bridge/src/custom_interfaces/: CMakeLists.txt  package.xml
bridge/src/custom_interfaces/srv/: StringToString.srv
bridge/src/env_bridge/: package.xml  setup.cfg  setup.py
bridge/src/env_bridge/env_bridge/: env_bridge.py
bridge/src/mc_sdk_bridge/: CMakeLists.txt  package.xml
bridge/src/mc_sdk_bridge/include/: mc_sdk_bridge.h
bridge/src/mc_sdk_bridge/launch/: mc_sdk_node.launch.py
bridge/src/mc_sdk_bridge/src/: main.cpp  mc_sdk_bridge.cpp
bridge/src/mc_sdk_msg/: CMakeLists.txt  package.xml
bridge/src/mc_sdk_msg/msg/: HighLevelCmd.msg  HighLevelRobotState.msg
configs/: config.json  config_matrix.yaml
docs/: guide.md  vln_baseline.md
envs/: matrix_env.py
llms/: vlmllm.py
llms/example_outputs/: cloud_qwen3vl.txt  huggingface_smol256m.txt  ollama_gemma.txt
llms/huggingface_models/smolvlm2_256m_video_instruct/: client_test.py  server.py  smolvlm2_256m_video_instruct.py
llms/huggingface_models/smolvlm2_2dot2B_instruct/: server.py  smolvlm2_2dot2B_instruct.py
utils/: disk_viz.py
